--- a/stilo.css
+++ b/stilo.css
@@ -2,7 +2,9 @@ body {
     font-family: Arial, sans-serif;
     text-align: center;
     margin: 50px;
+    background-color: grey;
 }
+
 .fable {
     font-size: 24px;
     max-width: 600px;
